--- a/css/main.css
+++ b/css/main.css
@@ -239,7 +239,7 @@ nav #icon-nav{
         height: 0;
         line-height: .5;
         opacity: 0;
-        background-color: #fff;
+        background-color: rgba(255, 255, 255, 0.795);
         overflow: hidden;
     }
     header .nav-minu.show{
